apps/whoami/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
